Fixed name popup on maps being too high if you've scrolled, fixed positioning of Role card tooltip, added link on Game Over popup to go to the recap screen, tweaked wording of Armored/Cloned status effects in recap to show who attacked you

--- a/escape-api/assets/stylesheets/overlays.css
+++ b/escape-api/assets/stylesheets/overlays.css
@@ -60,7 +60,6 @@
         position: absolute;
         opacity: 0;
         right: 105%;
-        bottom: 15%;
         width: 150px;
         background-color: black;
         color: white;
